# Raytracing_in_One_Weekend

./: .gitignore  2  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  go.mod  main.go
color/: color.go
common/: common.go
docker/: Dockerfile.linux
images/: bouncing_sphere.ppm  checkered_ground.ppm  checkered_spheres.ppm  cornell_box_with_blocks_of_smoke.ppm  cornell_box_with_two_boxes.ppm  diffused_sphere.ppm  diffused_sphere_with_gamma_correction.ppm  (+55 more)
include/: CMakeLists.txt  rt.c  rt.h
include/color/: CMakeLists.txt  color.c  color.h
include/hittable/: CMakeLists.txt  hittable.c  hittable.h
include/hittable_list/: CMakeLists.txt  hittable_list.c  hittable_list.h
include/ray/: CMakeLists.txt  ray.c  ray.h
include/renderer/: CMakeLists.txt  renderer.c  renderer.h
include/sphere/: CMakeLists.txt  sphere.c  sphere.h
include/vec3/: CMakeLists.txt  vec3.c  vec3.h
lib/vk_utils/: Cargo.toml  attributes.rs  common.rs  constants.rs  debug.rs  device.rs  framebuffer.rs  image.rs  mod.rs  queue.rs  render_pass.rs  surface.rs  swapchain.rs  tools.rs  vulkan.rs
lib/vk_utils/debug/: mod.rs
lib/vk_utils/src/: application.rs  buffer.rs  command_buffer.rs  command_pool.rs  debug.rs  depth_buffer.rs  descriptor_binding.rs  descriptor_pool.rs  descriptor_set_layout.rs  descriptor_set_manager.rs  descriptor_sets.rs  device.rs  device_memory.rs  engine.rs  fence.rs  graphics_pipeline.rs  image.rs  image_view.rs  instance.rs  lib.rs  semaphore.rs  surface.rs  swapchain.rs  utils.rs  window.rs
lib/vk_utils/src/assets/: mod.rs
lib/vk_utils/src/types/: functions.rs  mod.rs
lib/vk_utils/src/vk_init/: buffer.rs  command.rs  debug.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  pipeline.rs  pixel_color.rs  render.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs
lib/vk_utils/types/: mod.rs  vertex3d.rs
lib/vk_utils/window/: mod.rs  window.rs
(+114 files in other folders)
