[package]
name = "raytracing_in_one_weekend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtweekend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono      = ">= 0.4.22"
logger      = {path = "./lib/logger"}
vk_utils    = {path = "./lib/vk_utils"}
